--- a/utils/args.yaml
+++ b/utils/args.yaml
@@ -1,22 +1,23 @@
-min_lr: 0.000100000000            # initial learning rate
-max_lr: 0.010000000000            # maximum learning rate
-momentum: 0.9370000000            # SGD momentum/Adam beta1
-weight_decay: 0.000500            # optimizer weight decay
-warmup_epochs: 3.00000            # warmup epochs
-box: 7.500000000000000            # box loss gain
-cls: 0.500000000000000            # cls loss gain
-dfl: 1.500000000000000            # dfl loss gain
-hsv_h: 0.0150000000000            # image HSV-Hue augmentation (fraction)
-hsv_s: 0.7000000000000            # image HSV-Saturation augmentation (fraction)
-hsv_v: 0.4000000000000            # image HSV-Value augmentation (fraction)
-degrees: 0.00000000000            # image rotation (+/- deg)
-translate: 0.100000000            # image translation (+/- fraction)
-scale: 0.5000000000000            # image scale (+/- gain)
-shear: 0.0000000000000            # image shear (+/- deg)
-flip_ud: 0.00000000000            # image flip up-down (probability)
-flip_lr: 0.50000000000            # image flip left-right (probability)
-mosaic: 1.000000000000            # image mosaic (probability)
-mix_up: 0.000000000000            # image mix-up (probability)
+buffer: True # if dataset is large buffer should be True, otherwise False
+psp: 0.0000
+translate: 0.100000
+degree: 0.000000000
+mosaic: 1.000000000
+mixup: 0.0000000000
+scale: 0.5000000000
+shear: 0.0000000000
+hsv_v: 0.400000
+hsv_s: 0.700000
+hsv_h: 0.015000
+flip_ud: 0.00000
+flip_lr: 0.50000
+bgr: 0.0
+decay: 0.0005
+box: 7.50000000000000
+cls: 0.500000000000
+dfl: 1.5000000000
+
+
 names:
   0: person
   1: bicycle
